cluster/apps/vpn/namespace.yaml
# cluster/apps/vpn/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vpn
  labels:
    name: vpn
